# Energy-Optimizer

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  Backlog-Bugfixes.md  Backlog-Erledigt.md  Backlog.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  GenerateConsData.py  MIGRATION.md  Miniserver-Gen2_Energiemonitor_LeistungVerbrauch_20230323-20260615.csv  README.md  app.py  app_test_data.py  awattar_client.py  backtesting_log.json  backtesting_log.py  backtesting_window_snapshots.jsonl  build-container.ps1  charging_context.py  config.example.json  config.py  config.schema.json  config_back.json  cons_data_hourly.meta.json  cons_data_pending.json  cons_data_store.py  consumer_targets.py  consumption_profiles.csv  data_loader.py  docker-compose-greenfield.yml  docker-compose-loxberry.yml  docker-compose-synology.yml  docker-compose.yml  einspeisetarife_dach.json  einspeisetarife_dach_erweitert.json  file_metadata.py  (+30 more)
.cursor/: hooks.json
.githooks/: post-commit  pre-commit
backlog/: Backlog-Bugfixes.md  Backlog-Erledigt.md  Backlog.md
config/: .gitkeep  backtesting_scenarios.example.json  backtesting_scenarios.minimal.json  backtesting_scenarios.schema.json  components.json  config.example.json  config.minimal.json  config.schema.json  deviation_rules.example.json  deviation_rules.schema.json  house_profiles.example.json  house_profiles.json  house_profiles.minimal.json  house_profiles.schema.json  prognosis-heating-need.py  tariffs.example.json  tariffs.json  tariffs.minimal.json  tariffs.schema.json
data/: backtesting_prices.py  cons_data_house_profile.py  cons_data_season_mirror.py  cons_data_store.py  consumer_targets.py  consumption_profiles.py  data_loader.py  energiemonitor_csv.py  eu_market_features.py  feed_in_prices.py  heating_need.py  live_consumption.py  loxone_csv_timeseries.py  market_prices.py  modeled_climate.py  monthly_float_rates.py  open_meteo_solar_archive.py  outdoor_forecast.py  planning_window.py  price_forecast_eval.py  price_forecast_live.py  price_forecast_model.py  price_forecast_viz.py  profile_manager.py  pv_forecast.py  pv_tuner.py  tariff_pricing.py  thermal_backtest.py  thermal_calibration.py
docker/: Dockerfile  README.md  build-container.ps1  entrypoint.sh
docs/: README.md
earnie_env_se_m2/: README.md
house_config/: __init__.py  awattar_api.py  baseload.py  consumption_csv.py  earnie_role.py  energy_counter_csv.py  entity_resolution.py  ev_profile.py  generic_schedule.py  geo_timezone.py  id_slug.py  known_chart_display.py  migrate_runtime_entities.py  planning_flex_bridge.py  profile_csv_policy.py  profiles_store.py  scenario_resolution.py  tariff_plausibility.py  tariffs_store.py  thermal_labels.py
integrations/: awattar_client.py  loxone_client.py  loxone_comm_trace.py  loxone_connectivity.py  loxone_log_import.py  loxone_watchdog.py
migrated/: MIGRATION_REVIEW.md  house_profiles.json  tariffs.json
optimizer/: __init__.py  appliance_recommendation.py  appliance_schedule.py  battery.py  battery_wear.py  cbc_events.py  cbc_solver.py  charge_immediate.py  charging_context.py  charging_session.py  consistency.py  consumer_power.py  delivery_tracking.py  deviation_eval.py  deviation_facts.py  eauto_milp.py  filter_context.py  generic_flex_run.py  milp.py  milp_consumers.py  milp_horizon.py  schedule.py  simulation.py  targets.py  thermal_flex_context.py  thermal_model.py  thermal_targets.py
runtime/: local_settings.example.json
runtime_store/: appliance_schedules.py  bootstrap.py  chart_debug_capture.py  cloud_demo.py  config_drift.py  config_load.py  data_model.py  debug_dump_archive.py  debug_dump_inputs.py  dotenv_io.py  (+12 more)
(+569 files in other folders)
