[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earnie"
description = "Energieoptimierung für Smarthome (Batterie, PV, flexible Verbraucher) mit Streamlit-UI"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "requests==2.31.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "pulp>=2.8.0",
    "python-dotenv>=1.0.0",
    "astral>=3.2",
    "jsonschema>=4.0.0",
    "timezonefinder>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "vulture>=2.11",
    "pytest-deadfixtures>=2.2.1",
]
mutation = [
    "mutmut>=2.7.0",
]

[project.scripts]
earnie-backtesting = "scripts.run_backtesting:main"
earnie-verify-loxone = "scripts.verify_loxone_setup:main"
earnie-bootstrap = "scripts.bootstrap_runtime:main"
earnie-validate-tariffs = "scripts.validate_tariffs:main"
earnie-build-image = "scripts.build_container:main"
earnie-generate-cons-data = "scripts.generate_cons_data:main"
ernie-backtesting = "scripts.run_backtesting:main"
ernie-verify-loxone = "scripts.verify_loxone_setup:main"
ernie-bootstrap = "scripts.bootstrap_runtime:main"
ernie-validate-tariffs = "scripts.validate_tariffs:main"
ernie-build-image = "scripts.build_container:main"
ernie-generate-cons-data = "scripts.generate_cons_data:main"

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "optimizer*",
    "data*",
    "integrations*",
    "runtime_store*",
    "ui*",
    "simulation*",
    "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_loxone: Integrationstest gegen echten Loxone-Miniserver",
    "slow: Längerer Backtesting- oder MILP-Integrationslauf",
    "test_health_protected: Nie automatisch als Review-Kandidat markieren",
]

[tool.coverage.run]
source = ["optimizer", "data", "house_config", "simulation", "settings", "runtime_store"]
omit = ["tests/*", "scripts/*", "ui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
